bon, ca, c'est pour une route securisée de download au document avec un Bearer Token
